4.x: Update annotation design for scheduling to align with "namespace" classes (#10073)
* Update annotation design for scheduling to align with "namespace" classes, and move to SE to prepare for declarative.
* Deprecated existing MP annotations
* Fixed documentation
* Updated usages